# fetchme

./: .clang-format  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cc_and_flags.mk  config.mk  config_backend.mk  fetchme-easy.c  meson.build  perf.data  perf.data.old
.github/workflows/: c-cpp.yml  codeql-analysis.yml  makefile.yml
docs/: CHANGELOG.md  CODESTYLE.md  COMPATABILITY.md  CONTRIBUTING.md  CONTRIBUTORS.md  FEATURES.md  NOTABLE_THINGS.md  fetchme.1  fetchme.1.bz2
src/: fetchme.c  meson.build
src/modules/: color.c  cpu_info.c  disk.c  distro.c  gpu_info.c  gpu_info.c.bak  gpu_info_v1.c  gpu_info_v2.c  kernel.c  memory_info.c  package_count.c  ref.c  refresh_rate.c  res.c  resolution.c  shell.c  terminal.c  uptime_info.c  username_at_hostname.c  wm.c
src/modules/include/: color.h  config.h  cpu_info.h  disk.h  distro.h  fetchme.h  gpu_info.h  kernel.h  memory_info.h  package_count.h  refresh_rate.h  resolution.h  shell.h  terminal.h  uptime_info.h  username_at_hostname.h  wm.h
